DDF-3828 Fixes the css for the input with param component
 - Previously it would spill outside it's container, now it sizes it's children correctly.

--- a/ui/packages/catalog-ui-search/src/main/webapp/component/filter/filter.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/component/filter/filter.less
@@ -32,6 +32,12 @@
     min-width: 12.5*@minimumFontSize;
   }
 
+  > .filter-input {
+    @{customElementNamespace}input.is-with-param {
+      min-width: 20*@minimumFontSize;
+    }
+  }
+
   > .filter-attribute {
     @{customElementNamespace}dropdown.is-editing .dropdown-text {
       width: auto;
